# mpc-service

./: Cargo.toml  README.md
src/: handler.rs  lib.rs  main.rs  model.rs  response.rs  route.rs
src/data/: party_0_key.json  party_1_key.json  party_2_key.json
src/off_chain/: common.rs  protocol.rs  recipient.rs  sender.rs  utils.rs
src/off_chain/network/: behaviour.rs  hash_map.rs  setup.rs  sink.rs  stream.rs
src/scripts/: peer_id_gen.rs
