[package]
name = "mpc-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "peer_id_gen"
path = "src/scripts/peer_id_gen.rs"

[[bin]]
name = "protocol"
path = "src/off_chain/bin/main.rs"

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-serialize = "0.5.0"
crypto-bigint = "0.6.1"
hex = "0.4.3"
rand = "0.8.0"
secp256k1 = {version = "0.30.0", features = ["rand", "std"]}
sha3 = "0.10.8"
sha2 = "0.10.8"
bincode = "1.3.3"
cggmp21 = { version = "0.6.0", features = ["curve-secp256k1"] }
futures = "0.3.31"
gennaro-dkg = "0.8.0"
libp2p = { version = "0.55.0", features = ["noise", "ping", "tcp", "tokio", "yamux", "request-response", "gossipsub", "mdns", "macros", "quic"] }
phf = { version = "0.11.3", features = ["macros"] }
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
